[package]
name = "x509"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-parser = { version = "0.14.0"}
ascii_converter = "0.3.0"
x509-certificate = "0.16.0"
barebones-x509 = {version="0.5.2", default-features=false, features=["webpki"]}
der-parser = "8.1.0"
x509-cert = { version="0.2.0-pre", path='./x509-cert'}
arbitrary = { version = "1.2.0", features = ["derive"], optional = true }
const-oid = { version = "=0.10.0-pre", features = ["db"], path = "./const-oid" }
der = { version = "=0.7.0-pre", features = ["derive", "alloc", "flagset"], path = "./der" }
flagset = { version = "0.4.3" }
spki = { version = "=0.7.0-pre", path = "./spki" }